# mecanumrover3_ros2

./: .gitmodules  LICENSE  README.md
mecanumrover3/: CHANGELOG.rst  CMakeLists.txt  package.xml
mecanumrover3_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
mecanumrover3_bringup/launch/: mouse_teleop.launch.py  robot.launch.py
mecanumrover3_bringup/rviz/: mecanum3.rviz
mecanumrover3_bringup/src/: pub_odom.cpp
mecanumrover_description/: CMakeLists.txt  README.md  package.xml
mecanumrover_description/launch/: display.launch.py
mecanumrover_description/meshes/: back_left_wheel_1.stl  back_right_wheel_1.stl  base_link.stl  front_left_wheel_1.stl  front_right_wheel_1.stl
mecanumrover_description/rviz/: mecanum3.rviz
mecanumrover_description/urdf/: materials.xacro  mecanum3.gazebo  mecanum3.trans  mecanum3.xacro
